# voxel

./: .gitmodules  CMakeLists.txt
src/: impl.c  main.c  util.c  util.h
src/generation/: heightmap.c  heightmap.h  perlin.c  perlin.h
src/graphics/: camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h  vertex.h
src/graphics/shaders/: voxel.frag  voxel.vert
src/platform/: sdl_window.c  sdl_window.h
